Updates for Enterprise and ActivityMaster.